# X3D

./: .gitignore  README.md  pyproject.toml
src/: main.py  pred.py  pred_videos.sh
src/x3d/: __init__.py  datamodule.py  model.py
