[project]
name = "X3D"
version = "0.1.0"
description = "X3D model for fire & smoke classification"
authors = [
    {name = "heonjin", email = "kwon@4ind.co.kr"},
]
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "lightning>=2.4.0",
    "albumentations>=1.4.14",
    "pytorchvideo>=0.1.5",
    "rich>=13.8.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
